fix unnecessary loading img on tablet and desktop versions

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1184,6 +1184,7 @@ img {
   }
   .features__wrap::after {
     display: none;
+    background-image: none;
   }
   .features__list {
     position: relative;
