--- a/src/scss/components/_features.scss
+++ b/src/scss/components/_features.scss
@@ -123,6 +123,7 @@
 
     &::after {
       display: none;
+      background-image: none;
     }
   }
 
